@@ -27,8 +27,10 @@ public abstract class Card {
         return marbles.size() == 1;
     }
     public boolean validateMarbleColours(ArrayList<Marble> marbles) {
-        return gameManager.getActivePlayerColour() == marbles.getFirst().getColour();
+
+        return gameManager.getActivePlayerColour().equals(marbles.get(0).getColour());
     }
+    // TODO: abstract void act(ArrayList<Marble> marbles) throws ActionException, InvalidMarbleException;
 
     public abstract void act(ArrayList<Marble> marbles) throws ActionException, InvalidMarbleException;
 
